# NTQQ-sign-to-Lagrange-sign

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  extract_signature.py  load.js  sign.json  start.bat  start.ps1  start.sh  test_offsets.bat  test_offsets.ps1  x64dbg使用指南.md  x64dbg查找地址实战指南.md  反推函数名指南.md  地址计算器.bat  快速启动.bat  快速测试.md  打开9.9.12版本.bat  查找9921偏移值指南.md  查找签名函数详细指南.md  查看导出函数.bat  正确使用x64dbg.txt  特征码提取实战.md  特征码搜索指南.txt
.github/workflows/: build.yml  docker-publish.yml  release.yml
include/moehoo/: hook.h  proc_maps.h
src/: hijacker.cpp  main.cpp  run_as_node.cpp  run_as_node.h  server.cpp  server.h  sign.cpp  sign.h
